hphp/hack/test/typecheck/switch_case_terminality1.php.like_types.exp
File "switch_case_terminality1.php", line 12, characters 14-17:
Invalid return type (Typing[4110])
File "switch_case_terminality1.php", line 12, characters 32-34:
Expected int
File "switch_case_terminality1.php", line 12, characters 14-17:
But got null
